updated links and buttons to link to github hosted reports except for Exec Summ

--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
 			</div>
 			<div class="six columns" style="margin-top: 2%">
 				<p><a href="https://docs.google.com/presentation/d/1tP5XDvnDlRzorfSavvwvof4GgTNCF4b3b7MnhsIHB6s/edit?usp=drive_link" target="blank">📄 Executive summary</a></p>
-				<p><a href="https://docs.google.com/presentation/d/15O-XibjwNONQ4JKKGmFwQjzOxrQv72Q9gMei2wHWDyU/edit?usp=drive_link" target="blank">📄 Housing needs assessment</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1gv3yHMZCvMVq0dfUnTQpqSKZhS-vU4aa_7xVN5oxPVU/edit?usp=drive_link" target="blank">📄 Affordable housing development barriers assessment</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1_2W-24EMyxV9MmpBXMtHhvo36ZCZfgATNW696n_JO_0/edit?usp=drive_link" target="blank">📄 Strategies to increase housing production</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1IPB97RXOvNAULMOPFaRswtja5IdK7VAD1TQDcSy0TC0/edit?usp=drive_link" target="blank">📄 Place-based opportunities and constraints</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1xE2GztGl8iJy7BzaEKI5vu2qwgpYbJXsacTmk1Bd9MU/edit?usp=drive_link" target="blank">📄 Literature review</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1rg1KW9unizyJFKDLRR0llLGvIIKkRx-QgN7wBdPIywo/edit?usp=drive_link" target="blank">📄 Map atlas</a></p>
+				<p><a href="./pdfs/Housing needs assessment - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Housing needs assessment</a></p>
+				<p><a href="./pdfs/Development barriers - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Affordable housing development barriers assessment</a></p>
+				<p><a href="./pdfs/Strategies - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Strategies to increase housing production</a></p>
+				<p><a href="./pdfs/Place based analysis - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Place-based opportunities and constraints</a></p>
+				<p><a href="./pdfs/Literature review, stakeholder engagement - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Literature review</a></p>
+				<p><a href="./pdfs/Atlas - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Map atlas</a></p>
 			</div>
 		</div>
 	</div>
@@ -379,7 +379,7 @@
 		<div class="row section">
 			<div class="twelve columns center-align" style="margin-top: 2%">
 				<p>Read the full report:</p>
-				<p><a href="https://docs.google.com/presentation/d/15O-XibjwNONQ4JKKGmFwQjzOxrQv72Q9gMei2wHWDyU/edit?usp=drive_link" target="blank"><button>📄 Housing Needs Assessment</button></a></p>
+				<p><a href="./pdfs/Housing needs assessment - Honolulu Comprehensive Housing Plan.pdf" target="blank"><button>📄 Housing Needs Assessment</button></a></p>
 			</div>
 		</div>
 	</div>
@@ -452,7 +452,7 @@
 		<div class="row section">
 			<div class="twelve columns center-align" style="margin-top: 2%">
 				<p>Read the full report:</p>
-				<p><a href="https://docs.google.com/presentation/d/1_2W-24EMyxV9MmpBXMtHhvo36ZCZfgATNW696n_JO_0/edit?usp=drive_link" target="blank"><button>📄 Strategies to Improve Housing Production</button></a></p>
+				<p><a href="./pdfs/Strategies - Honolulu Comprehensive Housing Plan.pdf" target="blank"><button>📄 Strategies to Improve Housing Production</button></a></p>
 			</div>
 		</div>
 		<div class="row section">
@@ -497,7 +497,7 @@
 		<div class="row section">
 			<div class="twelve columns center-align" style="margin-top: 2%">
 				<p>Read the full report:</p>
-				<p><a href="https://docs.google.com/presentation/d/1IPB97RXOvNAULMOPFaRswtja5IdK7VAD1TQDcSy0TC0/edit?usp=drive_link" target="blank"><button>📄 Place-based Opportunities Analysis</button></a></p>
+				<p><a href="./pdfs/Place based analysis - Honolulu Comprehensive Housing Plan.pdf" target="blank"><button>📄 Place-based Opportunities Analysis</button></a></p>
 			</div>
 		</div>
 		<div class="row insight">
@@ -507,12 +507,12 @@
 			</div>
 			<div class="six columns" style="margin-top: 2%">
 				<p><a href="https://docs.google.com/presentation/d/1tP5XDvnDlRzorfSavvwvof4GgTNCF4b3b7MnhsIHB6s/edit?usp=drive_link" target="blank">📄 Executive summary</a></p>
-				<p><a href="https://docs.google.com/presentation/d/15O-XibjwNONQ4JKKGmFwQjzOxrQv72Q9gMei2wHWDyU/edit?usp=drive_link" target="blank">📄 Housing needs assessment</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1gv3yHMZCvMVq0dfUnTQpqSKZhS-vU4aa_7xVN5oxPVU/edit?usp=drive_link" target="blank">📄 Affordable housing development barriers assessment</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1_2W-24EMyxV9MmpBXMtHhvo36ZCZfgATNW696n_JO_0/edit?usp=drive_link" target="blank">📄 Strategies to increase housing production</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1IPB97RXOvNAULMOPFaRswtja5IdK7VAD1TQDcSy0TC0/edit?usp=drive_link" target="blank">📄 Place-based opportunities and constraints</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1xE2GztGl8iJy7BzaEKI5vu2qwgpYbJXsacTmk1Bd9MU/edit?usp=drive_link" target="blank">📄 Literature review</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1rg1KW9unizyJFKDLRR0llLGvIIKkRx-QgN7wBdPIywo/edit?usp=drive_link" target="blank">📄 Map atlas</a></p>
+				<p><a href="./pdfs/Housing needs assessment - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Housing needs assessment</a></p>
+				<p><a href="./pdfs/Development barriers - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Affordable housing development barriers assessment</a></p>
+				<p><a href="./pdfs/Strategies - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Strategies to increase housing production</a></p>
+				<p><a href="./pdfs/Place based analysis - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Place-based opportunities and constraints</a></p>
+				<p><a href="./pdfs/Literature review, stakeholder engagement - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Literature review</a></p>
+				<p><a href="./pdfs/Atlas - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Map atlas</a></p>
 			</div>
 		</div>
 	</div>
