--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 					<p>The Comprehensive Housing Plan builds on the Office of Housing’s 2023 Housing Plan with extensive data analysis, stakeholder engagement, policy review, and actionable recommendations to help the City and County of Honolulu achieve its housing goals through 2029 and beyond.</p>
 					<p>This plan is intended to help stakeholders and residents understand the details and nuances of the City’s housing challenge, coordinating with other City departments and governing datasets and metrics to provide a strategic roadmap to unlock opportunities for expanded housing production across the spectrum of affordability - and especially among income levels that have been underserved by current policies and market activity.</p>
 					<p>This website version of the plan highlights key observations and findings. The Plan's Executive Summary is available here, including links to supporting reports from the Comprehensive Housing Plan:</p>
-					<p><a href="https://docs.google.com/presentation/d/1tP5XDvnDlRzorfSavvwvof4GgTNCF4b3b7MnhsIHB6s/edit?usp=drive_link" target="blank"><button>📄 Executive Summary</button></a></p>
+					<p><a href="./pdfs/Executive Summary - Honolulu Comprehensive Housing Plan.pdf" target="blank"><button>📄 Executive Summary</button></a></p>
 				</div>
 			</div>
 		</div>
@@ -254,7 +254,7 @@
 				<p>The sections below summarize the Plan's key analytical findings and policy recommendations. The links at right lead to the full set of reports and documents comprising the plan.</p>
 			</div>
 			<div class="six columns" style="margin-top: 2%">
-				<p><a href="https://docs.google.com/presentation/d/1tP5XDvnDlRzorfSavvwvof4GgTNCF4b3b7MnhsIHB6s/edit?usp=drive_link" target="blank">📄 Executive summary</a></p>
+				<p><a href="./pdfs/Executive Summary - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Executive summary</a></p>
 				<p><a href="./pdfs/Housing needs assessment - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Housing needs assessment</a></p>
 				<p><a href="./pdfs/Development barriers - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Affordable housing development barriers assessment</a></p>
 				<p><a href="./pdfs/Strategies - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Strategies to increase housing production</a></p>
@@ -506,7 +506,7 @@
 				<p>Thank you for reading this online summary of the Comprehensive Housing Plan. The links at right lead to the full set of reports and documents comprising the plan for further reading and reference.</p>
 			</div>
 			<div class="six columns" style="margin-top: 2%">
-				<p><a href="https://docs.google.com/presentation/d/1tP5XDvnDlRzorfSavvwvof4GgTNCF4b3b7MnhsIHB6s/edit?usp=drive_link" target="blank">📄 Executive summary</a></p>
+				<p><a href="./pdfs/Executive Summary - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Executive summary</a></p>
 				<p><a href="./pdfs/Housing needs assessment - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Housing needs assessment</a></p>
 				<p><a href="./pdfs/Development barriers - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Affordable housing development barriers assessment</a></p>
 				<p><a href="./pdfs/Strategies - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Strategies to increase housing production</a></p>
