added links to images

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 				<p>Currently, the development pipeline outpaces projected new demand for &lt;80% AMI housing and falls far short of projected new demand for 80-140% AMI housing (which includes expected growth plus the outmigration likely to occur without sufficient housing supply). While resources should not be diverted from low-income housing, more attention is needed to close the gap at 80-140% AMI.</p>			
 			</div>
 			<div class="six columns" style="margin-top: 2%">
-				<p><img src="./images/charts/incentivizeworkforce.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></p>				
+				<p><a href="./images/charts/incentivizeworkforce.png"><img src="./images/charts/incentivizeworkforce.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></a></p>				
 			</div>
 		</div>
 		<div class="row section">
@@ -446,7 +446,7 @@
 		<div class="row insight" id="Policies">
 			<div class="twelve columns" style="margin-top: 2%">
 				<h4>The 5-year strategy will expand housing availability for all income levels:</h4>
-				<p><img src="./images/charts/sankey.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></p>				
+				<p><a href="./images/charts/sankey.png"><img src="./images/charts/sankey.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></a></p>				
 			</div>
 		</div>
 		<div class="row section">
@@ -474,7 +474,7 @@
 			<div class="twelve columns" style="margin-top: 2%">
 				<h4>Housing development should be concentrated within TOD areas.</h4>
 				<p>78% of the 5-year growth is allocated to the three sustainable area plans containing the transit-oriented development areas, while the remaining 22% is allocated to the more rural sustainable communities with an eye on smaller scale infill housing, retrofits and replacement, and supporting the workforce.</p>
-				<p><img src="./images/charts/blobdiagram.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></p>				
+				<p><a href="./images/charts/blobdiagram.png"><img src="./images/charts/blobdiagram.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></a></p>				
 			</div>
 		</div>
 		<div class="row insight">
@@ -483,7 +483,7 @@
 				<p>The station areas include over 9 square miles of parcels within ½ mile, currently home to 32,064 units. The State’s TOD Council is currently focusing housing-supportive infrastructure efforts at: East Kapolei (1,000 units), Stadium / Halawa (2,000 units), and Iwilei Center (27,500 units).</p>			
 			</div>
 			<div class="six columns" style="margin-top: 2%">
-				<p><img src="./images/charts/todcapacity.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></p>				
+				<p><a href="./images/charts/todcapacity.png"><img src="./images/charts/todcapacity.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></a></p>				
 			</div>
 		</div>
 		<div class="row insight" id="Map">
