--- a/index.html
+++ b/index.html
@@ -419,7 +419,9 @@
 				<p><strong>Stem the flow of out-migration driven by Honolulu’s high housing costs and high cost of living.</strong> The outmigration threatens to deprive Honolulu of moderate-income households, who are the engine of Oahu’s economy.</p>
 				<p><strong>Increase opportunities for homeownership</strong> and homebuyers’ ability to build wealth through homeownership.</p>
 				<p><strong>Ensure the availability of housing for residents across the income spectrum.</strong></p>
+				<p><strong>Encourage a majority of new housing development to occur in TOD areas,</strong> especially those currently prioritized by the state (East Kapolei, Halawa-Stadium, and Iwilei-Kapalama)</p>
 				<p><strong>Align infrastructure investment with housing development plans</strong> to make the most effective use of limited infrastructure funding and long implementation timeframes. </p>
+				<p><strong>Ensure that the City's staff capacity matches the tasks assigned to it.</strong> This includes permitting and housing finance and development staff capacity to support the desired scale and pace of development.</p>
 				<p><strong>Recognize the need to balance:</strong></p>
 				<li><strong>The City’s needs for property tax revenues</strong> to sustain vital services (e.g. police, fire, road maintenance, etc.) that benefit the community,</li>
 				<li><strong>The community's need for affordable housing,</strong> and</li>
