--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 					<p>The Comprehensive Housing Plan builds on the Office of Housing’s 2023 Housing Plan with extensive data analysis, stakeholder engagement, policy review, and actionable recommendations to help the City and County of Honolulu achieve its housing goals through 2029 and beyond.</p>
 					<p>This plan is intended to help stakeholders and residents understand the details and nuances of the City’s housing challenge, coordinating with other City departments and governing datasets and metrics to provide a strategic roadmap to unlock opportunities for expanded housing production across the spectrum of affordability - and especially among income levels that have been underserved by current policies and market activity.</p>
 					<p>This website version of the plan highlights key observations and findings. The Plan's Executive Summary is available here, including links to supporting reports from the Comprehensive Housing Plan:</p>
-					<p><a href="./pdfs/Executive Summary - Honolulu Comprehensive Housing Plan.pdf" target="blank"><button>📄 Executive Summary</button></a></p>
+					<p><!--<a href="./pdfs/Executive Summary - Honolulu Comprehensive Housing Plan.pdf" target="blank">--><button>📄 Executive Summary (coming soon)</button><!--</a>--></p>
 				</div>
 			</div>
 		</div>
@@ -254,13 +254,13 @@
 				<p>The sections below summarize the Plan's key analytical findings and policy recommendations. The links at right lead to the full set of reports and documents comprising the plan.</p>
 			</div>
 			<div class="six columns" style="margin-top: 2%">
-				<p><a href="./pdfs/Executive Summary - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Executive summary</a></p>
-				<p><a href="./pdfs/Housing needs assessment - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Housing needs assessment</a></p>
-				<p><a href="./pdfs/Development barriers - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Affordable housing development barriers assessment</a></p>
-				<p><a href="./pdfs/Strategies - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Strategies to increase housing production</a></p>
-				<p><a href="./pdfs/Place based analysis - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Place-based opportunities and constraints</a></p>
-				<p><a href="./pdfs/Literature review, stakeholder engagement - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Literature review</a></p>
-				<p><a href="./pdfs/Atlas - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Map atlas</a></p>
+				<p><!--<a href="./pdfs/Executive Summary - Honolulu Comprehensive Housing Plan.pdf" target="blank">-->📄 Executive summary (coming soon)<!--</a>--></p>
+				<p><!--<a href="./pdfs/Housing needs assessment - Honolulu Comprehensive Housing Plan.pdf" target="blank">-->📄 Housing needs assessment (coming soon)<!--</a>--></p>
+				<p><!--<a href="./pdfs/Development barriers - Honolulu Comprehensive Housing Plan.pdf" target="blank">-->📄 Affordable housing development barriers assessment (coming soon)<!--</a>--></p>
+				<p><!--<a href="./pdfs/Strategies - Honolulu Comprehensive Housing Plan.pdf" target="blank">-->📄 Strategies to increase housing production (coming soon)<!--</a>--></p>
+				<p><!--<a href="./pdfs/Place based analysis - Honolulu Comprehensive Housing Plan.pdf" target="blank">-->📄 Place-based opportunities and constraints (coming soon)<!--</a>--></p>
+				<p><!--<a href="./pdfs/Literature review, stakeholder engagement - Honolulu Comprehensive Housing Plan.pdf" target="blank">-->📄 Literature review (coming soon)<!--</a>--></p>
+				<p><!--<a href="./pdfs/Atlas - Honolulu Comprehensive Housing Plan.pdf" target="blank">-->📄 Map atlas (coming soon)<!--</a>--></p>
 			</div>
 		</div>
 	</div>
@@ -379,7 +379,7 @@
 		<div class="row section">
 			<div class="twelve columns center-align" style="margin-top: 2%">
 				<p>Read the full report:</p>
-				<p><a href="./pdfs/Housing needs assessment - Honolulu Comprehensive Housing Plan.pdf" target="blank"><button>📄 Housing Needs Assessment</button></a></p>
+				<p><!--<a href="./pdfs/Housing needs assessment - Honolulu Comprehensive Housing Plan.pdf" target="blank">--><button>📄 Housing Needs Assessment (coming soon)</button><!--</a>--></p>
 			</div>
 		</div>
 	</div>
@@ -454,7 +454,7 @@
 		<div class="row section">
 			<div class="twelve columns center-align" style="margin-top: 2%">
 				<p>Read the full report:</p>
-				<p><a href="./pdfs/Strategies - Honolulu Comprehensive Housing Plan.pdf" target="blank"><button>📄 Strategies to Improve Housing Production</button></a></p>
+				<p><!--<a href="./pdfs/Strategies - Honolulu Comprehensive Housing Plan.pdf" target="blank">--><button>📄 Strategies to Improve Housing Production (coming soon)</button><!--</a>--></p>
 			</div>
 		</div>
 		<div class="row section">
@@ -499,9 +499,10 @@
 		<div class="row section">
 			<div class="twelve columns center-align" style="margin-top: 2%">
 				<p>Read the full report:</p>
-				<p><a href="./pdfs/Place based analysis - Honolulu Comprehensive Housing Plan.pdf" target="blank"><button>📄 Place-based Opportunities Analysis</button></a></p>
+				<p><!--<a href="./pdfs/Place based analysis - Honolulu Comprehensive Housing Plan.pdf" target="blank">--><button>📄 Place-based Opportunities Analysis (coming soon)</button><!--</a>--></p>
 			</div>
 		</div>
+		<!--
 		<div class="row insight">
 			<div class="six columns" style="margin-top: 2%">
 				<h2>Access the full Comprehensive Housing Plan:</h2>
@@ -517,6 +518,7 @@
 				<p><a href="./pdfs/Atlas - Honolulu Comprehensive Housing Plan.pdf" target="blank">📄 Map atlas</a></p>
 			</div>
 		</div>
+		-->
 	</div>
 
 	<div class="footer">
